<resources>
    <string name="app_name">iChat</string>
    <string name="logo">logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="profile">Profile</string>
    <string name="phone_number">Phone Number</string>
    <string name="code">Code</string>
    <string name="_91">+91</string>
    <string name="login">Enter your mobile number to continue</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="verification_code">Verification code</string>
    <string name="verify">Enter verification code sent to: </string>
    <string name="resending_code">Resending code in:</string>
    <string name="time">Time</string>
    <string name="log_out">Log Out</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="status">Status</string>
    <string name="find_some_one_to_chat_in_contacts">Find some one to chat in Contacts</string>
    <string name="no_chats_available">No Chats Available</string>
    <string name="title">Title</string>
    <string name="invite">Invite</string>
    <string name="type_your_message_here">Type your message here...</string>
    <string name="send">send</string>
    <string name="msg">msg</string>
    <string name="user">Enter your name and status to continue</string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="resend_code">Resend Code</string>
</resources>