<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColor"
    tools:context=".Activities.AuthActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="188dp"
        android:layout_height="171dp"
        android:layout_marginTop="76dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/i_chat" />

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:elevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/mobile"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="148dp"
                android:autofillHints=""
                android:backgroundTint="@color/appColor"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/code"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:autofillHints=""
                android:backgroundTint="@color/appColor"
                android:ems="10"
                android:hint="@string/code"
                android:inputType="textPersonName"
                android:text="@string/_91"
                android:textColorHighlight="@color/appColor"
                app:layout_constraintBottom_toBottomOf="@+id/mobile"
                app:layout_constraintEnd_toStartOf="@+id/mobile"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/mobile" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/appColor"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/mobile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.509"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.805" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/appColor"
                android:text="@string/next"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mobile" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>