<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEF0FA"
    tools:context=".Activities.ChatRoomActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarChat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/appColor"
        android:minHeight="?attr/actionBarSize"
        android:padding="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginEnd="10dp">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/photo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/user"
                app:civ_border_width="1dp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:ellipsize="marquee"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="2dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/messageBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarChat" />

    <EditText
        android:id="@+id/messageBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="Type your message here"
        android:background="@drawable/edit_text_background"
        android:hint="@string/type_your_message_here"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/send"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/send"
        android:layout_width="47dp"
        android:layout_height="47dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="13dp"
        android:clickable="true"
        android:contentDescription="@string/send"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="@+id/messageBox"
        app:srcCompat="@drawable/ic_baseline_send_24" />

</androidx.constraintlayout.widget.ConstraintLayout>